--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-by FORTINEROCAVS
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impostor del Under - Rageylo Edition</title>
-    <link rel="icon" type="image/x-icon" href="https://cdn.7tv.app/emote/01GQMW7ZFG0004A5FQAX7Q1DEB/4x.avif">
+   <link rel="icon" type="image/png" href="https://i.postimg.cc/k51D1wYF/4x-(1).avif">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap" rel="stylesheet">
     
     <style>
@@ -292,4 +290,5 @@ by FORTINEROCAVS
         }
     </script>
 </body>
+
 </html>
