--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 { name: "PACHUDANI🏄‍♂️", img: "https://i.postimg.cc/gkSFQ5HF/descarga-(1).jpg" },
                 { name: "Wiz Khalifa", img: "https://i.scdn.co/image/ab6761610000e5ebc66b0a8c3268f0b6556f64a8" },
                 { name: "Sa!koro", img: "https://images.genius.com/c2e1b9704d362f2826af42e98a878d96.500x500x1.png" },
-                { name: "Underaiki", img: "https://i.postimg.cc/8PjM29fD/Whats-App-Image-2025-12-25-at-22-07-27.jpg" },
+                { name: "Underaiki", img: "https://244a58fa4a.cbaul-cdnwnd.com/028a8eefb8aa330e25c402b6f92d8c72/200000138-816df816e0/artworks-ku0avQmZAtBlTuiA-ncwzyA-t500x500.jpeg?ph=244a58fa4a" },
                 { name: "Laurasad", img: "https://i.postimg.cc/htdkQbX7/q-loko-q-ta-mi-vasitoooooooooo.jpg" },
                 { name: "Francis Jeremy", img: "https://i.scdn.co/image/ab67616d00001e02765fe3d4cdb634f95b9aab19" },
                 { name: "HWII", img: "https://i.postimg.cc/4xrQnq0q/image.jpg" },
@@ -342,3 +342,4 @@
     </script>
 </body>
 </html>
+
